--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,9 @@ authors = ["Your Name <your.email@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.11"
 openai = "^1.50.2"
+python-dotenv = "^1.0.1"
+
+[tool.poetry.group.dev.dependencies]
+jupyter = "^1.1.1"
+notebook = "^7.2.2"
+
