--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,9 @@ authors = ["Your Name <your.email@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.11"
-openai = "^1.50.2"
+#openai = "^1.50.2"
 python-dotenv = "^1.0.1"
+openai = "0.27"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
