--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.11"
 #openai = "^1.50.2"
 python-dotenv = "^1.0.1"
 openai = "0.27"
+redlines = "^0.4.2"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
