--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ python = "^3.11"
 python-dotenv = "^1.0.1"
 openai = "0.27"
 redlines = "^0.4.2"
+panel = "^1.5.1"
+jupyter-bokeh = "^4.0.5"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
