--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,12 @@ redlines = "^0.4.2"
 panel = "^1.5.1"
 jupyter-bokeh = "^4.0.5"
 gradio = "^4.44.1"
+langgraph = "^0.2.34"
+langchain-openai = "^0.2.2"
+langchain-community = "^0.3.1"
+jupyter = "^1.1.1"
+tavily-python = "^0.5.0"
+duckduckgo-search = "^6.2.13"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
