--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ langchain-community = "^0.3.1"
 jupyter = "^1.1.1"
 tavily-python = "^0.5.0"
 duckduckgo-search = "^6.2.13"
+pyodbc = "^5.1.0"
+tabulate = "^0.9.0"
+pandas = "^2.2.3"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
